--- a/Building a City Skyline/stepHTML.html
+++ b/Building a City Skyline/stepHTML.html
@@ -257,6 +257,13 @@
                     Nest six div elements within <kbd>.fb4b</kbd> and give them all a class of <kbd>fb4-window</kbd>.
                 </div>
             </li>
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="ms-2 me-auto">
+                    <div class="fw-bold">Step 111</div>
+                    Add <kbd>sky</kbd> as a second class to the <kbd>.background-buildings</kbd> element. You are going
+                    to make a background for the skyline.
+                </div>
+            </li>
         </ol>
     </main>
     <footer>
